add date to changelog

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <!--<version-->
         <!--name="4.5.0"-->
-        <!--description="Unreleased">-->
+        <!--description="January 17th, 2019">-->
         <!--<text>Select a phrase to blacklist, instead of just blacklisting by phone number (TODO: Remove feature flag)</text>-->
     <!--</version>-->
 
