--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -16,11 +16,11 @@
 
 <changelog>
 
-    <!--<version-->
-        <!--name="4.5.0"-->
-        <!--description="January 17th, 2019">-->
-        <!--<text>Select a phrase to blacklist, instead of just blacklisting by phone number (TODO: Remove feature flag)</text>-->
-    <!--</version>-->
+    <version
+        name="4.5.0"
+        description="January 17th, 2019">
+        <text>Select a phrase to blacklist, instead of just blacklisting by phone number</text>
+    </version>
 
     <version
         name="4.4.0"
