improvements to fast scroll on tablet

--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -59,6 +59,7 @@
                 android:layout_marginStart="@dimen/message_list_padding"
                 android:paddingBottom="12dp"
                 android:clipToPadding="false"
+                android:alpha="@integer/message_list_fastscroll_handle_alpha"
                 app:bubbleSize="small"/>
 
         </RelativeLayout>
