--- a/shared/src/main/res/values/integers.xml
+++ b/shared/src/main/res/values/integers.xml
@@ -18,5 +18,6 @@
 
     <integer name="images_column_count">4</integer>
     <integer name="message_list_fragment_line_entry_count">6</integer>
+    <integer name="message_list_fastscroll_handle_alpha">255</integer>
 
 </resources>
