update version number

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -35,6 +35,7 @@
         <text>Contact management improvements for the web version: https://github.com/klinker-apps/messenger-issues/issues/620</text>
         <text>Bug fixes</text>
         <text>Performance improvements</text>
+        <text>Prep for future features</text>
     </version>
 
     <version
