--- a/shared/src/main/res/layout/dialog_scheduled_message_content.xml
+++ b/shared/src/main/res/layout/dialog_scheduled_message_content.xml
@@ -46,6 +46,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start" />
 
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_height="200dp"
+            android:visibility="gone"/>
+
     </LinearLayout>
 
 </LinearLayout>
