--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -259,8 +259,19 @@
         <item>@string/select_gif</item>
     </string-array>
 
-    <string-array name="send_button_long_click_options">
+    <string-array name="send_button_signature_no_delay">
         <item>@string/send_as_scheduled_message</item>
+        <item>@string/send_without_signature</item>
+    </string-array>
+
+    <string-array name="send_button_no_signature_delay">
+        <item>@string/send_as_scheduled_message</item>
+        <item>@string/send_without_delay</item>
+    </string-array>
+
+    <string-array name="send_button_signature_delay">
+        <item>@string/send_as_scheduled_message</item>
+        <item>@string/send_without_delay</item>
         <item>@string/send_without_signature</item>
     </string-array>
 
