--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -23,6 +23,7 @@
         <text>Attach images and GIFs to scheduled messages</text>
         <text>Support for recurring scheduled messages</text>
         <text>Support for entering a hex color when choosing theme colors</text>
+        <text>Long clicking the send button provides new functionality and options, depending on what you have enabled in settings: send without the applied signature, send without the applied delay, schedule the message.</text>
     </version>
 
     <version
