--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -206,6 +206,17 @@
                         android:tint="@color/secondaryText"
                         android:visibility="gone" />
 
+                    <ImageButton
+                        android:id="@+id/view_scheduled_messages"
+                        android:layout_width="32dp"
+                        android:layout_height="match_parent"
+                        android:background="?selectableItemBackgroundBorderless"
+                        android:clickable="true"
+                        android:contentDescription="@string/view_scheduled_messages"
+                        android:src="@drawable/ic_schedule_small"
+                        android:tint="@color/secondaryText"
+                        android:visibility="gone" />
+
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
