remove feature flag for the new internal camera

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         name="4.6.2"
         description="Unreleased">
         <!-- clear text entry after applying it to the scheduled message -->
+        <!-- fully rollout new in-app camera -->
         <text>Bug fixes</text>
     </version>
 
