--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,7 +19,7 @@
     <version
         name="4.6.4"
         description="March 1st, 2019">
-        <!-- Fixes for sharing multiple images from Google Photos -->
+        <!-- Fixes for sharing multiple images from the gallery -->
         <text>Bug fixes</text>
     </version>
 
