apply the correct default color scheme and add an option for it in the color picker

--- a/shared/src/main/res/drawable/unread_indicator.xml
+++ b/shared/src/main/res/drawable/unread_indicator.xml
@@ -20,7 +20,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/colorPrimary"/>
+        android:color="@color/pulseColorPrimary"/>
 
     <size
         android:width="10dp"
