--- a/shared/src/main/res/layout/view_attach_menu.xml
+++ b/shared/src/main/res/layout/view_attach_menu.xml
@@ -17,7 +17,7 @@
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/pulseColorPrimary"
         android:fillViewport="true">
 
         <LinearLayout
