--- a/shared/src/main/res/values/colors.xml
+++ b/shared/src/main/res/values/colors.xml
@@ -14,16 +14,16 @@
   ~ limitations under the License.
   -->
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Main App Colors -->
-    <!--<color name="colorPrimary">#428AFF</color>-->
-    <!--<color name="colorPrimaryDark">#3778ED</color>-->
-    <!--<color name="colorPrimaryLight">#82B9FF</color>-->
-    <color name="colorPrimary">#1775D2</color>
-    <color name="colorPrimaryDark">#1665C0</color>
-    <color name="colorPrimaryLight">#63A3FF</color>
-    <color name="colorAccent">#FF6E40</color>
+    <!--<color name="pulseColorPrimary">#428AFF</color>-->
+    <!--<color name="pulseColorPrimaryDark">#3778ED</color>-->
+    <!--<color name="pulseColorPrimaryLight">#82B9FF</color>-->
+    <color name="pulseColorPrimary">#1775D2</color>
+    <color name="pulseColorPrimaryDark">#1665C0</color>
+    <color name="pulseColorPrimaryLight">#63A3FF</color>
+    <color name="pulseColorAccent">#FF6E40</color>
 
     <!-- Material Design Colors -->
     <color name="materialRed">#F44336</color>
