--- a/shared/src/main/res/values/styles_leanback.xml
+++ b/shared/src/main/res/values/styles_leanback.xml
@@ -21,7 +21,7 @@
          all of the leanback stuff from the support library and merging it into the app compat
          styles. Messy, but I don't see any other way -->
     <style name="AppTheme.Leanback" parent="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <item name="android:colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorPrimary">@color/pulseColorPrimary</item>
         <item name="android:windowBackground">@color/background</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
