--- a/shared/src/main/res/layout/message_round_received.xml
+++ b/shared/src/main/res/layout/message_round_received.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/message_round_received_background"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/pulseColorPrimary"
         android:clickable="true"
         android:maxWidth="@dimen/max_message_width"
         android:orientation="vertical"
