--- a/shared/src/main/res/layout/page_quick_share.xml
+++ b/shared/src/main/res/layout/page_quick_share.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|start"
-        android:background="@color/colorPrimary"
+        android:background="@color/pulseColorPrimary"
         android:padding="16dp"
         app:max_height="220dp">
 
