--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,14 @@
 <changelog>
 
     <version
+        name="4.7.0"
+        description="Unreleased">
+        <!-- Update the color palletes - dark variant is not as dark when compared to primary (also fixed the status bar icon color being the same as title in the app bar -->
+        <text>New default color scheme + icon</text>
+        <text>UI improvements</text>
+    </version>
+
+    <version
         name="4.6.4"
         description="Unreleased">
         <!-- Fixes for sharing multiple images from Google Photos -->
