--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,8 +20,10 @@
         name="4.7.0"
         description="Unreleased">
         <!-- Update the color palletes - dark variant is not as dark when compared to primary (also fixed the status bar icon color being the same as title in the app bar -->
+        <!-- Changes to the SMS and MMS sent receivers to better handle callbacks to the shared database -->
         <text>New default color scheme + icon</text>
         <text>UI improvements</text>
+        <text>Bug fixes</text>
     </version>
 
     <version
