--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,9 +18,10 @@
 
     <version
         name="4.7.0"
-        description="Unreleased">
+        description="March 4th, 2019">
         <!-- Update the color palletes - dark variant is not as dark when compared to primary (also fixed the status bar icon color being the same as title in the app bar -->
         <!-- Changes to the SMS and MMS sent receivers to better handle callbacks to the shared database -->
+        <!-- Changes on how group messages handle the 8000 message size limit (just reload the entire cursor) -->
         <text>New default color scheme + icon</text>
         <text>UI improvements</text>
         <text>Bug fixes</text>
