--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="March xxth, 2019">
         <!-- Update text description warning on the danger zone toggle -->
         <!-- Update floating tutorial library and add a button for 'no thanks' on the rating request -->
+        <!-- Update the handler for the "added_message" FCM message, to stop if the message insertion fails (so that we can continue using the zero TTL notifier on the backend) -->
         <text>Bug fixes and performance improvements</text>
     </version>
 
