refactor the notification alerts to use an improved preference scheme (and allow for custom positions).
This preps the notification actions to start accepting smart replies, from MLKit

--- a/shared/src/main/res/xml/settings_global.xml
+++ b/shared/src/main/res/xml/settings_global.xml
@@ -63,13 +63,10 @@
             android:title="@string/notification_customization"
             android:summary="@string/alert_types_summary" />
 
-        <MultiSelectListPreference
+        <xyz.klinker.messenger.view.preference.NotificationActionsPreference
             android:key="@string/pref_notification_actions"
             android:title="@string/notification_actions"
-            android:summary="@string/notification_actions_summary"
-            android:defaultValue="@array/notification_actions_default"
-            android:entries="@array/notification_actions"
-            android:entryValues="@array/notification_actions_values" />
+            android:summary="@string/notification_actions_summary" />
 
         <SwitchPreference
             android:key="@string/pref_history_in_notifications"
