--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -111,12 +111,13 @@
     <string name="pref_emoji_style" translatable="false">emoji_style</string>
     <string name="pref_phone_number" translatable="false">phone_number</string>
     <string name="pref_keyboard_layout" translatable="false">keyboard_layout</string>
+    <string name="pref_notification_actions_selection" translatable="false">notification_actions_selection</string>
 
     <string name="pref_messaging_category" translatable="false">messaging_features</string>
     <string name="pref_app_features_category" translatable="false">app_features</string>
     <string name="pref_quick_compose_category" translatable="false">quick_compose_category</string>
     <string name="pref_quick_compose" translatable="false">quick_compose</string>
-    <string name="pref_quick_compose_favorites">quick_compose_favorites</string>
+    <string name="pref_quick_compose_favorites" translatable="false">quick_compose_favorites</string>
     <string name="pref_secure_private_conversations" translatable="false">private_conversations_passcode</string>
     <string name="pref_private_conversation_passcode_last_entry" translatable="false">private_conversations_passcode_last_entry</string>
     <string name="pref_internal_browser" translatable="false">internal_browser</string>
