add preference to settings for whether or not the user wants to enable smart replies (not implemented yet)

--- a/shared/src/main/res/xml/settings_features.xml
+++ b/shared/src/main/res/xml/settings_features.xml
@@ -25,6 +25,12 @@
             android:summary="@string/cleanup_old_messages_summary"/>
 
         <SwitchPreference
+            android:key="@string/pref_smart_reply"
+            android:title="@string/use_smart_replies"
+            android:summary="@string/use_smart_replies_summary"
+            android:defaultValue="true" />
+
+        <SwitchPreference
             android:key="@string/pref_internal_browser"
             android:title="@string/use_internal_browser"
             android:summary="@string/internal_browser_summary"
